# Impactor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  com.khcrysalis.PlumeImpactor.json  flatpak-build.sh
.cargo/: config.toml
.github/workflows/: build.yml
apps/plume_impactor/: Cargo.toml
apps/plume_impactor/src/: app.rs  main.rs  subscriptions.rs
apps/plumeimpactor/: Cargo.toml  build.rs
apps/plumeimpactor/src/: app.rs  defaults.rs  frame.rs  handlers.rs  listeners.rs  main.rs  refresh.rs  startup.rs  subscriptions.rs  tray.rs
apps/plumeimpactor/src/appearance/: fonts.rs
apps/plumesign/: Cargo.toml
apps/plumesign/src/: main.rs
apps/plumesign/src/commands/: account.rs  device.rs  macho.rs  mod.rs  sign.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/grand_slam/: Cargo.toml
crates/mach/: Cargo.toml
crates/plume_core/: Cargo.toml
crates/plume_core/src/: lib.rs
crates/plume_store/src/: refresh.rs  store.rs
crates/plume_types/: Cargo.toml
crates/plume_types/src/: bundle.rs  device.rs  options.rs  signer.rs
crates/plume_utils/src/: lib.rs  package.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/types/src/: options.rs  signer.rs
crates/utils/: Cargo.toml
crates/utils/src/: bundle.rs  device.rs  lib.rs  options.rs  package.rs  signer.rs  tweak.rs
package/flatpak/: com.khcrysalis.PlumeImpactor.desktop  com.khcrysalis.PlumeImpactor.metainfo.xml  dev.khcrysalis.PlumeImpactor.metainfo.xml
package/linux/: dev.khcrysalis.PlumeImpactor.desktop
package/windows/: icon.rgba  installer.nsi
(+48 files in other folders)
